--- a/view.html
+++ b/view.html
@@ -50,7 +50,30 @@
         </div>
     </section>
     <section class="table">
-
+        <!-- <div class="interior">
+            <div class="row">
+                <h4>Date</h4>
+                <h4>Title</h4>
+                <h4>Content</h4>
+            </div>
+            <div class="row">
+                <h4>1/1/2022</h4>
+                <h4>COPYRIGHT DAY</h4>
+                <h4>hello</h4>
+            </div>
+        </div> -->
+        <table class="calendarTable">
+            <tr class="row">
+                <th>Date</th>
+                <th>Title</th>
+                <th>Content</th>
+            </tr>
+                <!-- <tr class="tableRow">
+                    <td>1/1/2022</td>
+                    <td>COPYRIGHT DAY</td>
+                    <td>If neither you nor your daughter can pronounce the words in a book report that you argue was not plagiarized, you might be a bad parent.</td>
+                </tr> -->
+        </table>
     </section>
 </body>
 </html>
