--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <!-- <script src="./js/script.js" defer></script> -->
-    <script type="module" src="./js/script.js" defer></script>
+    <script src="./js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/96b11160a9.js" crossorigin="anonymous"></script>
     <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet">
     <title>Facebook Calendar</title>
@@ -95,7 +95,7 @@
                         <h2>Sam Shuman</h2>
                     </div>
                     <div class="arrows">
-                        <div class="leftOne" onclick="previous()">
+                        <div class="leftOne">
                             <i class="fa-solid fa-angle-left"></i>
                         </div>
                         <div class="rightOne" onclick="next()">
@@ -184,7 +184,7 @@
     </main>
     <section>
         <div class="datePick">
-                <select class="month" name="month" id="month" onchange="monthChange()">
+                <select class="month" name="month" id="month">
                     <option value="0" selected>January</option>
                     <option value="1">February</option>
                     <option value="2">March</option>
@@ -236,7 +236,7 @@
                 </select> -->
         </div>
         <div class="subContainer">
-            <button type="submit" onclick="dateChange()">Search</button>
+            <button class="dateChange" type="submit">Search</button>
         </div>
     </section>
 </body>
