--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="./js/script.js" defer></script>
+    <script src="./js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/96b11160a9.js" crossorigin="anonymous"></script>
     <title>Facebook Calendar</title>
 </head>
@@ -40,7 +40,7 @@
                 </div>
         </div>
         <div class="gameBtn">
-            <button class="generatebtn" onclick="generateQuestion()" disabled>Next Question</button>
+            <button class="generatebtn" disabled>Next Question</button>
         </div>
     </section>
 </body>
