--- a/view.html
+++ b/view.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="./js/script.js" defer></script>
+    <script src="./js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/96b11160a9.js" crossorigin="anonymous"></script>
     <title>Facebook Calendar</title>
 </head>
@@ -22,9 +22,9 @@
         <div class="interior">
             <h2>Calendar 2022</h2>
             <div class="monthName">
-                <i class="fa-solid fa-angle-left" onclick="calMonthChange(this)" data-val="-1"></i>
+                <i class="fa-solid fa-angle-left calMonthChange" data-val="-1"></i>
                 <h3 class="calMonth" data-index="0">January</h3>
-                <i class="fa-solid fa-angle-right" onclick="calMonthChange(this)" data-val="1"></i>
+                <i class="fa-solid fa-angle-right calMonthChange" data-val="1"></i>
             </div>
             <div class="daySection">
                 <div class="row">
