--- a/index.html
+++ b/index.html
@@ -239,5 +239,8 @@
             <button class="dateChange" type="submit">Search</button>
         </div>
     </section>
+    <footer>
+        <div></div>
+    </footer>
 </body>
 </html>
